--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bower": "^1.8.8",
+    "connect-redis": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "mysql2": "^2.1.0"
+    "mysql2": "^2.1.0",
+    "redis": "^3.0.2"
   }
 }
