--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql2": "^2.1.0",
+    "nodemon": "^2.0.4",
     "redis": "^3.0.2"
   }
 }
