--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "sabores",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "nodemon ./bin/www"
-  },
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "bower": "^1.8.8",
-    "connect-redis": "^5.0.0",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
-    "express-session": "^1.17.1",
-    "formidable": "^1.2.2",
-    "http-errors": "~1.6.3",
-    "moment": "^2.27.0",
-    "morgan": "~1.9.1",
-    "mysql2": "^2.1.0",
-    "nodemon": "^2.0.4",
-    "redis": "^3.0.2",
-    "save": "^2.4.0"
-  }
+	"name": "sabores",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"start": "nodemon app.js"
+	},
+	"dependencies": {
+		"body-parser": "^1.19.0",
+		"bower": "^1.8.8",
+		"connect-redis": "^5.0.0",
+		"cookie-parser": "~1.4.4",
+		"debug": "~2.6.9",
+		"ejs": "~2.6.1",
+		"express": "^4.15.2",
+		"express-session": "^1.17.1",
+		"formidable": "^1.2.2",
+		"http-errors": "~1.6.3",
+		"moment": "^2.27.0",
+		"morgan": "~1.9.1",
+		"mysql2": "^2.1.0",
+		"nodemon": "^2.0.4",
+		"redis": "^3.0.2",
+		"save": "^2.4.0",
+		"socket.io": "^2.3.0"
+	}
 }
